--- a/test-page/index.html
+++ b/test-page/index.html
@@ -17,7 +17,7 @@
         <div id = 'subtitle'>Test Page</div>
         <div id = 'info'>
             This is a demo page for the interactive nep-explorer tool created by the <a target = '_blank' href = 'https://community.amstat.org/biop/workinggroups/safety/safety-home'>Safety Scientific Working Group</a>.
-            Code, details and documentation are available on <a href="https://github.com/SafetyGraphics/nep-explorer">github</a>.
+            Code, details and documentation are available on <a href="https://github.com/SafetyGraphics/nep-explorer">GitHub</a>.
         </div>
         <div id = 'container'></div>
     </body>
