fix #34; fix #33; fix #30

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -3,7 +3,7 @@
         <title>nep-explorer - Test Page</title>
         <meta http-equiv = 'Content-Type' content = 'text/html; charset = utf-8'>
 
-        <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script>
+        <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.js'></script>
         <script type = 'text/javascript' src = 'https://cdn.jsdelivr.net/gh/RhoInc/webcharts@1/build/webcharts.js'></script>
         <script type = 'text/javascript' src = './webcharts.js'></script>
         <script type = 'text/javascript' src = '../nepExplorer.js'></script>
